--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,13 @@
             "request": "launch",
             "program": "${workspaceFolder}/main.py",
             "console": "integratedTerminal"
+        },
+        {
+            "name": "Run Asset Posterizer",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/posterize.py",
+            "console": "integratedTerminal"
         }
     ]
 }
